--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -42,6 +42,7 @@
 	"funding": "https://github.com/discordjs/discord.js?sponsor",
 	"dependencies": {
 		"@actions/core": "^1.10.1",
+		"@actions/github": "^6.0.0",
 		"@actions/glob": "^0.5.0",
 		"@discordjs/scripts": "workspace:^",
 		"@vercel/blob": "^0.23.4",
