--- a/packages/actions/package.json
+++ b/packages/actions/package.json
@@ -47,6 +47,7 @@
 		"@discordjs/scripts": "workspace:^",
 		"@vercel/blob": "^0.23.4",
 		"@vercel/postgres": "^0.9.0",
+		"commander": "^12.1.0",
 		"meilisearch": "^0.38.0",
 		"p-limit": "^6.1.0",
 		"tslib": "^2.6.3",
