--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ on:
         type: choice
         required: false
         options:
+          - all
           - discord.js
           - '@discordjs/brokers'
           - '@discordjs/builders'
